--- a/src/gui/view/AddRemoveMovie.fxml
+++ b/src/gui/view/AddRemoveMovie.fxml
@@ -14,13 +14,13 @@
         <Button fx:id="cancelSongBtn" layoutX="209.0" layoutY="294.0" mnemonicParsing="false" onAction="#handleCancelMovieBtn" prefHeight="26.0" prefWidth="56.0" text="Cancel" />
         <Button layoutX="282.0" layoutY="167.0" mnemonicParsing="false" onAction="#handleChooseFile" text="Choose" />
         <Label layoutX="20.0" layoutY="31.0" text="Title" />
-        <Label layoutX="17.0" layoutY="77.0" text="Artist" />
+        <Label layoutX="17.0" layoutY="77.0" text="Rating" />
         <Label layoutX="8.0" layoutY="123.0" text="Category" />
         <Label layoutX="22.0" layoutY="171.0" text="File" />
-        <TextField fx:id="songTitleField" layoutX="67.0" layoutY="27.0" prefHeight="26.0" prefWidth="198.0" />
-        <TextField fx:id="songArtistField" layoutX="66.0" layoutY="73.0" prefHeight="26.0" prefWidth="198.0" />
-        <TextField fx:id="pathField" layoutX="67.0" layoutY="167.0" prefHeight="26.0" prefWidth="198.0" />
-        <SplitMenuButton fx:id="category" alignment="TOP_CENTER" layoutX="66.0" layoutY="119.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="198.0" text="Choose one">
+        <TextField fx:id="titleTextfield" layoutX="67.0" layoutY="27.0" prefHeight="26.0" prefWidth="198.0" />
+        <TextField fx:id="ratingTextField" layoutX="66.0" layoutY="73.0" prefHeight="26.0" prefWidth="198.0" />
+        <TextField fx:id="pathTextField" layoutX="67.0" layoutY="167.0" prefHeight="26.0" prefWidth="198.0" />
+        <SplitMenuButton fx:id="categoryBox" alignment="TOP_CENTER" layoutX="66.0" layoutY="119.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="198.0" text="Choose one">
             <items>
                 <MenuItem fx:id="Horror" mnemonicParsing="false" onAction="#horrorAction" text="Rock music" />
                 <MenuItem fx:id="Triller" mnemonicParsing="false" onAction="#trillerAction" text="Rhythm and blues" />
@@ -29,6 +29,6 @@
             </items>
         </SplitMenuButton>
         <Label layoutX="19.0" layoutY="217.0" text="Time" />
-        <TextField fx:id="songTimeField" layoutX="67.0" layoutY="212.0" prefHeight="26.0" prefWidth="198.0" />
+        <TextField fx:id="timeTextField" layoutX="67.0" layoutY="212.0" prefHeight="26.0" prefWidth="198.0" />
     </children>
 </AnchorPane>
