--- a/src/GUI/View/MainView.fxml
+++ b/src/GUI/View/MainView.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="635.0" prefWidth="815.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controller.MainPageController">
+<AnchorPane prefHeight="635.0" prefWidth="815.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Controller.MainPageController">
    <children>
-      <TableView layoutX="18.0" layoutY="74.0" prefHeight="511.0" prefWidth="778.0">
+      <TableView fx:id="tableView" layoutX="18.0" layoutY="74.0" prefHeight="511.0" prefWidth="778.0">
         <columns>
           <TableColumn fx:id="nameColumn" prefWidth="270.4000053405762" text="Name" />
           <TableColumn fx:id="ratingColumn" prefWidth="84.79998779296875" text="Rating" />
