--- a/src/GUI/View/AddRemoveMovie.fxml
+++ b/src/GUI/View/AddRemoveMovie.fxml
@@ -1,34 +1,107 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitMenuButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="343.0" prefWidth="364.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controller.AddRemoveMovieController">
+<AnchorPane fx:id="dialogPane" prefHeight="400.0" prefWidth="495.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.controller.AlertDialogController">
     <children>
-        <Button layoutX="282.0" layoutY="119.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="56.0" text="More" />
-        <Button layoutX="282.0" layoutY="294.0" mnemonicParsing="false" onAction="#handleSaveNewMovie" prefHeight="26.0" prefWidth="56.0" text="Save" />
-        <Button fx:id="cancelSongBtn" layoutX="209.0" layoutY="294.0" mnemonicParsing="false" onAction="#handleCancelMovieBtn" prefHeight="26.0" prefWidth="56.0" text="Cancel" />
-        <Button layoutX="282.0" layoutY="167.0" mnemonicParsing="false" onAction="#handleChooseFile" text="Choose" />
-        <Label layoutX="20.0" layoutY="31.0" text="Title" />
-        <Label layoutX="17.0" layoutY="77.0" text="Rating" />
-        <Label layoutX="8.0" layoutY="123.0" text="Category" />
-        <Label layoutX="22.0" layoutY="171.0" text="File" />
-        <TextField fx:id="titleTextfield" layoutX="67.0" layoutY="27.0" prefHeight="26.0" prefWidth="198.0" />
-        <TextField fx:id="ratingTextField" layoutX="66.0" layoutY="73.0" prefHeight="26.0" prefWidth="198.0" />
-        <TextField fx:id="pathTextField" layoutX="67.0" layoutY="167.0" prefHeight="26.0" prefWidth="198.0" />
-        <SplitMenuButton fx:id="categoryBox" alignment="TOP_CENTER" layoutX="66.0" layoutY="119.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="198.0" text="Choose one">
-            <items>
-                <MenuItem fx:id="Horror" mnemonicParsing="false" onAction="#horrorAction" text="Rock music" />
-                <MenuItem fx:id="Triller" mnemonicParsing="false" onAction="#trillerAction" text="Rhythm and blues" />
-                <MenuItem fx:id="Action" mnemonicParsing="false" onAction="#actionOnAction" text="Reggae" />
-                <MenuItem fx:id="Erotic" mnemonicParsing="false" onAction="#actionErotic" text="Jazz" />
-            </items>
-        </SplitMenuButton>
-        <Label layoutX="19.0" layoutY="217.0" text="Time" />
-        <TextField fx:id="timeTextField" layoutX="67.0" layoutY="212.0" prefHeight="26.0" prefWidth="198.0" />
+        <GridPane hgap="20.0" layoutX="6.0" layoutY="86.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="245.0" prefWidth="452.0" vgap="5.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" percentWidth="0.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="59.5" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <TextField fx:id="titleTextField" prefHeight="30.0" prefWidth="143.0" GridPane.columnIndex="1" />
+                <TextField fx:id="artistTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                    <children>
+                        <ComboBox fx:id="comboBoxCategory" prefHeight="26.0" prefWidth="89.0">
+                            <HBox.margin>
+                                <Insets />
+                            </HBox.margin>
+                        </ComboBox>
+                        <TextField fx:id="lblNewCategory" prefHeight="26.0" prefWidth="54.0" promptText="Enter a Category" visible="false">
+                            <HBox.margin>
+                                <Insets left="20.0" />
+                            </HBox.margin>
+                        </TextField>
+                    </children>
+                </HBox>
+                <BorderPane GridPane.columnIndex="1" GridPane.rowIndex="5">
+                    <right>
+                        <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#isCanceled" text="Cancel" BorderPane.alignment="CENTER_RIGHT" />
+                    </right>
+                </BorderPane>
+                <BorderPane prefHeight="200.0" prefWidth="200.0">
+                    <right>
+                        <Label alignment="CENTER" text="Title:" BorderPane.alignment="CENTER" />
+                    </right>
+                </BorderPane>
+                <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                    <right>
+                        <Label text="Artist:" BorderPane.alignment="CENTER" />
+                    </right>
+                </BorderPane>
+                <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
+                    <right>
+                        <Label text="Time:" BorderPane.alignment="CENTER" />
+                    </right>
+                </BorderPane>
+                <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5" />
+                <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+                    <right>
+                        <Label text="Category: " BorderPane.alignment="CENTER" />
+                    </right>
+                </BorderPane>
+                <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
+                    <right>
+                        <Label text="File:" BorderPane.alignment="CENTER" />
+                    </right>
+                </BorderPane>
+                <Button alignment="CENTER" mnemonicParsing="false" onAction="#isFileChooserPressed" text="Choose" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                <BorderPane GridPane.columnIndex="2" GridPane.rowIndex="5">
+                    <right>
+                        <Button fx:id="saveButton" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#isSaved" text="Save" BorderPane.alignment="CENTER" />
+                    </right>
+                </BorderPane>
+                <BorderPane GridPane.columnIndex="1" GridPane.rowIndex="4">
+                    <center>
+                        <TextField fx:id="fileTextField" BorderPane.alignment="CENTER" />
+                    </center>
+                </BorderPane>
+                <BorderPane GridPane.columnIndex="1" GridPane.rowIndex="3">
+                    <left>
+                        <TextField fx:id="timeTextField" prefWidth="100.0" BorderPane.alignment="CENTER" />
+                    </left>
+                </BorderPane>
+            </children>
+            <padding>
+                <Insets bottom="20.0" right="20.0" top="20.0" />
+            </padding>
+        </GridPane>
+        <Label fx:id="lblSysMsg" layoutX="129.0" layoutY="7.0" prefHeight="91.0" prefWidth="224.0">
+            <font>
+                <Font name="System Bold" size="12.0" />
+            </font>
+        </Label>
     </children>
 </AnchorPane>
