--- a/src/GUI/View/AddRemoveMovie.fxml
+++ b/src/GUI/View/AddRemoveMovie.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -9,11 +10,10 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="dialogPane" prefHeight="400.0" prefWidth="495.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.controller.AlertDialogController">
+<AnchorPane fx:id="dialogPane" prefHeight="400.0" prefWidth="495.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Controller.AddRemoveMovieController">
     <children>
         <GridPane hgap="20.0" layoutX="6.0" layoutY="86.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="245.0" prefWidth="452.0" vgap="5.0">
             <columnConstraints>
@@ -25,30 +25,18 @@
                 <RowConstraints vgrow="SOMETIMES" />
                 <RowConstraints vgrow="SOMETIMES" />
                 <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
                 <RowConstraints vgrow="SOMETIMES" />
                 <RowConstraints vgrow="SOMETIMES" />
                 <RowConstraints vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
                 <TextField fx:id="titleTextField" prefHeight="30.0" prefWidth="143.0" GridPane.columnIndex="1" />
-                <TextField fx:id="artistTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                    <children>
-                        <ComboBox fx:id="comboBoxCategory" prefHeight="26.0" prefWidth="89.0">
-                            <HBox.margin>
-                                <Insets />
-                            </HBox.margin>
-                        </ComboBox>
-                        <TextField fx:id="lblNewCategory" prefHeight="26.0" prefWidth="54.0" promptText="Enter a Category" visible="false">
-                            <HBox.margin>
-                                <Insets left="20.0" />
-                            </HBox.margin>
-                        </TextField>
-                    </children>
-                </HBox>
-                <BorderPane GridPane.columnIndex="1" GridPane.rowIndex="5">
+                <TextField fx:id="ratingTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <BorderPane GridPane.columnIndex="1" GridPane.rowIndex="7">
                     <right>
-                        <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#isCanceled" text="Cancel" BorderPane.alignment="CENTER_RIGHT" />
+                        <Button mnemonicParsing="false" onAction="#handleCancelMovieBtn" text="Cancel" BorderPane.alignment="CENTER_RIGHT" />
                     </right>
                 </BorderPane>
                 <BorderPane prefHeight="200.0" prefWidth="200.0">
@@ -58,50 +46,58 @@
                 </BorderPane>
                 <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                     <right>
-                        <Label text="Artist:" BorderPane.alignment="CENTER" />
+                        <Label text="Rating:" BorderPane.alignment="CENTER" />
                     </right>
                 </BorderPane>
-                <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
+                <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5">
                     <right>
                         <Label text="Time:" BorderPane.alignment="CENTER" />
                     </right>
                 </BorderPane>
-                <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5" />
+                <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="7" />
                 <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                     <right>
                         <Label text="Category: " BorderPane.alignment="CENTER" />
                     </right>
                 </BorderPane>
-                <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
+                <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="6">
                     <right>
                         <Label text="File:" BorderPane.alignment="CENTER" />
                     </right>
                 </BorderPane>
-                <Button alignment="CENTER" mnemonicParsing="false" onAction="#isFileChooserPressed" text="Choose" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-                <BorderPane GridPane.columnIndex="2" GridPane.rowIndex="5">
+                <Button alignment="CENTER" mnemonicParsing="false" onAction="#isFileChooserPressed" text="Choose" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+                <BorderPane GridPane.columnIndex="2" GridPane.rowIndex="7">
                     <right>
-                        <Button fx:id="saveButton" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#isSaved" text="Save" BorderPane.alignment="CENTER" />
+                        <Button alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#handleSaveMovieBtn" text="Save" BorderPane.alignment="CENTER" />
                     </right>
                 </BorderPane>
-                <BorderPane GridPane.columnIndex="1" GridPane.rowIndex="4">
+                <BorderPane GridPane.columnIndex="1" GridPane.rowIndex="6">
                     <center>
                         <TextField fx:id="fileTextField" BorderPane.alignment="CENTER" />
                     </center>
                 </BorderPane>
-                <BorderPane GridPane.columnIndex="1" GridPane.rowIndex="3">
+                <BorderPane GridPane.columnIndex="1" GridPane.rowIndex="5">
                     <left>
                         <TextField fx:id="timeTextField" prefWidth="100.0" BorderPane.alignment="CENTER" />
                     </left>
                 </BorderPane>
+            <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
+               <right>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Category2:" BorderPane.alignment="CENTER" />
+               </right>
+            </BorderPane>
+            <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
+               <right>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Category3:" BorderPane.alignment="CENTER" />
+               </right>
+            </BorderPane>
+            <ComboBox prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <ChoiceBox prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <ComboBox prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             </children>
             <padding>
                 <Insets bottom="20.0" right="20.0" top="20.0" />
             </padding>
         </GridPane>
-        <Label fx:id="lblSysMsg" layoutX="129.0" layoutY="7.0" prefHeight="91.0" prefWidth="224.0">
-            <font>
-                <Font name="System Bold" size="12.0" />
-            </font>
-        </Label>
     </children>
 </AnchorPane>
