--- a/src/GUI/View/MainView.fxml
+++ b/src/GUI/View/MainView.fxml
@@ -20,7 +20,7 @@
         </columns>
       </TableView>
       <Button fx:id="filterButton" layoutX="744.0" layoutY="29.0" mnemonicParsing="false" onAction="#filterButtonOnAction" text="Clear" />
-      <TextField fx:id="filter" layoutX="18.0" layoutY="29.0" onKeyPressed="#fiterOnAction" prefHeight="26.0" prefWidth="702.0" />
+      <TextField fx:id="filter" layoutX="18.0" layoutY="29.0" onKeyPressed="#filterOnAction" prefHeight="26.0" prefWidth="702.0" />
       <Button fx:id="movieButton" layoutX="18.0" layoutY="595.0" mnemonicParsing="false" onAction="#movieButtonOnAction" prefHeight="26.0" prefWidth="172.0" text="Add/remove Movie" />
       <Button layoutX="321.0" layoutY="595.0" mnemonicParsing="false" onAction="#categoryButtonOnAction" prefHeight="26.0" prefWidth="172.0" text="Add/remove Category" />
       <Button layoutX="624.0" layoutY="595.0" mnemonicParsing="false" onAction="#ratingButtonOnAction" prefHeight="26.0" prefWidth="172.0" text="Add/change Rating" />
