--- a/src/GUI/View/AddRemoveCategory.fxml
+++ b/src/GUI/View/AddRemoveCategory.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -10,8 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controller.AddRemoveCategoryController">
+<AnchorPane xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Controller.AddRemoveCategoryController">
    <children>
       <VBox>
          <children>
@@ -24,16 +24,17 @@
                   </Text>
                </center>
             </BorderPane>
-            <GridPane>
+            <GridPane hgap="10.0" prefWidth="300.0" vgap="10.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <BorderPane prefHeight="200.0" prefWidth="200.0">
+                  <BorderPane prefHeight="30.0" prefWidth="100.0">
                      <center>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Name:" BorderPane.alignment="CENTER">
                            <BorderPane.margin>
@@ -42,10 +43,18 @@
                         </Text>
                      </center>
                   </BorderPane>
-                  <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+                  <BorderPane prefHeight="30.0" prefWidth="124.0" GridPane.columnIndex="1">
                      <center>
-                        <TextField BorderPane.alignment="CENTER" />
+                        <TextField fx:id="nameTextField" prefHeight="26.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
                      </center>
+                  </BorderPane>
+                  <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <right>
+                        <Button mnemonicParsing="false" onAction="#handleSaveButton" text="Save" BorderPane.alignment="CENTER" />
+                     </right>
+                     <left>
+                        <Button mnemonicParsing="false" onAction="#handleCancelButton" text="Cancel" BorderPane.alignment="CENTER" />
+                     </left>
                   </BorderPane>
                </children>
                <padding>
