--- a/src/GUI/View/MainView.fxml
+++ b/src/GUI/View/MainView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="635.0" prefWidth="815.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Controller.MainPageController">
+<AnchorPane prefHeight="635.0" prefWidth="815.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controller.MainPageController">
    <children>
       <TableView fx:id="tableView" layoutX="18.0" layoutY="74.0" prefHeight="511.0" prefWidth="778.0">
         <columns>
