--- a/src/GUI/View/MainView.fxml
+++ b/src/GUI/View/MainView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -26,9 +27,9 @@
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Label>
-                  <HBox spacing="20.0">
+                  <HBox prefHeight="26.0" prefWidth="891.0" spacing="50.0">
                      <children>
-                        <TextField fx:id="filter" onKeyPressed="#filterOnAction" prefHeight="26.0" prefWidth="702.0" />
+                        <TextField fx:id="filter" onKeyPressed="#filterOnAction" prefHeight="26.0" prefWidth="833.0" />
                         <Button fx:id="filterButton" mnemonicParsing="false" onAction="#filterButtonOnAction" text="Clear" />
                      </children>
                   </HBox>
@@ -39,10 +40,10 @@
                   <Button mnemonicParsing="false" text="Play movie" BorderPane.alignment="CENTER" />
                </center>
             </BorderPane>
-            <GridPane>
+            <GridPane hgap="20.0" vgap="20.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+                  <ColumnConstraints hgrow="SOMETIMES" />
                   <ColumnConstraints hgrow="SOMETIMES" />
                 <ColumnConstraints hgrow="SOMETIMES" percentWidth="0.0" />
               </columnConstraints>
@@ -70,20 +71,48 @@
                         <Button mnemonicParsing="false" text="Add" BorderPane.alignment="TOP_CENTER" />
                      </top>
                   </BorderPane>
-                  <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="2">
-                     <right>
-                        <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                  <BorderPane GridPane.columnIndex="3" GridPane.rowIndex="2">
+                     <left>
+                        <HBox spacing="20.0" BorderPane.alignment="CENTER">
                            <children>
                               <Button mnemonicParsing="false" text="Button" />
                               <Button mnemonicParsing="false" text="Button" />
                               <Button mnemonicParsing="false" text="Button" />
                            </children>
                         </HBox>
-                     </right>
+                     </left>
+                  </BorderPane>
+                  <TableView fixedCellSize="0.0" minWidth="250.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                    <columns>
+                      <TableColumn minWidth="150.0" prefWidth="264.99999237060547" text="Name of the movie" />
+                    </columns>
+                  </TableView>
+                  <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                    <columns>
+                      <TableColumn prefWidth="198.9999885559082" text="Categories" />
+                    </columns>
+                  </TableView>
+                  <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+                     <left>
+                        <HBox spacing="20.0" BorderPane.alignment="CENTER">
+                           <children>
+                              <Button mnemonicParsing="false" text="New" />
+                              <Button mnemonicParsing="false" text="Delete" />
+                           </children>
+                        </HBox>
+                     </left>
+                  </BorderPane>
+                  <BorderPane GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <center>
+                        <Button mnemonicParsing="false" text="Remove" BorderPane.alignment="CENTER" />
+                     </center>
                   </BorderPane>
                </children>
             </GridPane>
          </children>
+         <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </padding>
       </VBox>
    </children>
 </AnchorPane>
