--- a/src/GUI/View/MainView.fxml
+++ b/src/GUI/View/MainView.fxml
@@ -58,11 +58,11 @@
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Movies" BorderPane.alignment="CENTER" />
                      </left>
                   </BorderPane>
-                  <TableView minWidth="360.0" GridPane.columnIndex="3" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
+                  <TableView fx:id="tableView" minWidth="360.0" GridPane.columnIndex="3" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
                     <columns>
-                      <TableColumn minWidth="90.0" prefWidth="-1.0" text="Name" />
-                      <TableColumn minWidth="90.0" prefWidth="-1.0" text="IMDB Rating" />
-                        <TableColumn minWidth="90.0" prefWidth="-1.0" text="User rating" />
+                      <TableColumn fx:id="nameColumn" minWidth="90.0" prefWidth="-1.0" text="Name" />
+                      <TableColumn fx:id="imdbRatingColumn" minWidth="90.0" prefWidth="-1.0" text="IMDB Rating" />
+                        <TableColumn fx:id="ratingColumn" minWidth="90.0" prefWidth="-1.0" text="User rating" />
                         <TableColumn minWidth="90.0" prefWidth="-1.0" text="Last viewed" />
                     </columns>
                   </TableView>
