--- a/src/GUI/View/AddRemoveMovie.fxml
+++ b/src/GUI/View/AddRemoveMovie.fxml
@@ -2,8 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -24,16 +22,14 @@
             <rowConstraints>
                 <RowConstraints vgrow="SOMETIMES" />
                 <RowConstraints vgrow="SOMETIMES" />
-                <RowConstraints vgrow="SOMETIMES" />
-            <RowConstraints vgrow="SOMETIMES" />
-            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                 <RowConstraints vgrow="SOMETIMES" />
                 <RowConstraints vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <TextField fx:id="titleTextField" prefHeight="30.0" prefWidth="143.0" GridPane.columnIndex="1" />
-                <TextField fx:id="ratingTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                <BorderPane GridPane.columnIndex="1" GridPane.rowIndex="6">
+                <TextField fx:id="titleTextField" prefHeight="30.0" prefWidth="143.0" promptText="Enter a Movie title" GridPane.columnIndex="1" />
+                <TextField fx:id="ratingTextField" promptText="Enter your personal rating" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <BorderPane GridPane.columnIndex="1" GridPane.rowIndex="4">
                     <right>
                         <Button fx:id="cancelBtn" mnemonicParsing="false" onAction="#handleCancelMovieBtn" text="Cancel" BorderPane.alignment="CENTER_RIGHT" />
                     </right>
@@ -45,44 +41,32 @@
                 </BorderPane>
                 <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                     <right>
-                        <Label text="Rating:" BorderPane.alignment="CENTER" />
+                        <Label text="Personal Rating" BorderPane.alignment="CENTER" />
                     </right>
                 </BorderPane>
-                <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="6" />
-                <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
-                    <right>
-                        <Label text="Category: " BorderPane.alignment="CENTER" />
-                    </right>
-                </BorderPane>
-                <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5">
+                <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4" />
+                <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
                     <right>
                         <Label text="File:" BorderPane.alignment="CENTER" />
                     </right>
                 </BorderPane>
-                <Button alignment="CENTER" mnemonicParsing="false" onAction="#isFileChooserPressed" text="Choose" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-                <BorderPane GridPane.columnIndex="2" GridPane.rowIndex="6">
+                <Button alignment="CENTER" mnemonicParsing="false" onAction="#isFileChooserPressed" text="Choose" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                <BorderPane GridPane.columnIndex="2" GridPane.rowIndex="4">
                     <right>
                         <Button alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#handleSaveMovieBtn" text="Save" BorderPane.alignment="CENTER" />
                     </right>
                 </BorderPane>
-                <BorderPane GridPane.columnIndex="1" GridPane.rowIndex="5">
+                <BorderPane GridPane.columnIndex="1" GridPane.rowIndex="3">
                     <center>
-                        <TextField fx:id="fileTextField" BorderPane.alignment="CENTER" />
+                        <TextField fx:id="fileTextField" promptText="Enter a file path" BorderPane.alignment="CENTER" />
                     </center>
                 </BorderPane>
-            <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
+            <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                <right>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Category2:" BorderPane.alignment="CENTER" />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="IMDB Rating:" BorderPane.alignment="CENTER" />
                </right>
             </BorderPane>
-            <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
-               <right>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Category3:" BorderPane.alignment="CENTER" />
-               </right>
-            </BorderPane>
-            <ComboBox prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <ChoiceBox prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <ComboBox prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField promptText="Enter IMDB rating" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             </children>
             <padding>
                 <Insets bottom="20.0" right="20.0" top="20.0" />
